--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <%= link_to 'Manage Tasks',  tasks_path %>
+    <%= link_to 'Manage People',  people_path %>
+    
+    View Todo List (TBD)
     <%= yield %>
   </body>
 </html>
