--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :person_id %>
-    <%= form.text_field :person_id %>
+    <%= form.select :person_id, Person.all.collect {|p| [ p.name, p.id ] }, { include_blank: true } %>
   </div>
 
   <div class="field">
