--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
           <%= link_to 'Manage Tasks', tasks_path, class: "nav-item nav-link" %>
           <%= link_to 'Manage People', people_path, class: "nav-item nav-link" %>
-          <%= link_to 'View Todo List (TBD)', root_path, class: "nav-item nav-link" %>
+          <%= link_to 'View Todo List', root_path, class: "nav-item nav-link" %>
         </div>
       </div>
     </nav>  
