--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,22 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group field">
     <%= form.label :person_id %>
     <%= form.select :person_id, Person.all.collect {|p| [ p.name, p.id ] }, { include_blank: true } %>
   </div>
 
-  <div class="field">
+  <div class="form-check field">
+    <%= form.check_box :completed, class: "form-check-input" %>
     <%= form.label :completed %>
-    <%= form.check_box :completed %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group actions">
+    <%= form.submit nil, class: "btn btn-primary" %>
   </div>
 <% end %>
