clear out existing assignments when deleting a person

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Person</th>
-      <th>Completed</th>
-      <th colspan="2"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -16,8 +15,8 @@
     <% @tasks.each do |task| %>
       <tr>
         <td><%= link_to task.name, task %></td>
-        <td><%= link_to task.person.try(:name), person_path(task.person) %></td>
-        <td><%= task.completed %></td>
+        <td><%= person_name_link_to(task) %></td>
+        <td><%= task.completed ? "Completed" : "" %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Delete', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
